--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,6 +1,13 @@
 -- TODO
 
+TUI loop:
+-- clear_screen()
+-- list()
+-- prompt(): i.e., print a message 
+-- dispatch() perform actions, if any (add, delete, mark, exit)
 
--- allow natural language input: "add get applesauce" "done 3" "remove 1"
--- allow non-interactive addition: "todo get milk"
--- make TUI?
+clear_screen()
+-- \x1B[?25l // cursor invisible
+-- \x1B[H    // cursor move (0, 0)
+
+
